-*- mode: text; mode: fold -*-
Changes since 2.2.0
1. modules/socket-module.c: glibc-2.8 removed the h_addr macro.

Changes since 2.1.4
1. modules/termios-module.c: Added the VMIN constant (Laurent Perez).
2. src/slbstr.c: Added foreach method to BString_Type objects.
3. module/zlib-module.c: New module that wraps libz
   (compression/decompression library).
4. doc/tm/rtl/: Some documentation updates
5. configure: Added messages about what extra modules will and will
   not be built.
6. modules/mkfiles/makefile.all: Added zlib module to the makefile.
7. autoconf/configure.ac: Fixed the spelling oniguruma (Peter J. Ross)
8. src/slang.c,slparse.c,sltoken.c: Added 'break n' and 'continue n'
   statements.
9. src/slang.c: break-n and continue-n were not being properly handled
   when used outside a function.
10. src/slparse.c, sltoken.c: Added the C-like ternary-expression
    "condition ? foo : bar".
11. src/sltoken.c: Added support for mult-line strings:

        "This is a \
	 multiline \
	 string".

         `This is another
	 multiline 
	 string.`

    Note that the backquoted does not require a backslash at the end
    of lines.
12. src/sltoken.c: When reading subsequent lines of a multiline
    string, increment the readline parse_level.
13. src/sltoken.c: When performing backslash expansion, if a solitary
    backslash occurs at the end of a line, or is preceeded by a
    newline at the end of a line, then ignore it.
14. src/slexcept.c: The use of an ERROR_BLOCK was causing the pointer
    holding the name of the function with the error to be freed twice.
15. slsh/lib/rline/*keys.sl: Bind "\n" to the readline "enter" function.
16. src/sltoken.c: Improved and simplified the way operators are
    mapped to tokens.
17. slsh/lib/sldbcore.sl: sldb was printing all the elements of a
    container object when using the "p" command.
18. src/slarrfun.c: Added a "sumsq" function, which sums over the
    squares of the elements of an array.